Fix spacing on bullet points, upload atomic habits notes

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -35,7 +35,6 @@ p {
 
 ul, ol, dl {
   margin-top: 0;
-  margin-bottom: 1rem;
 }
 
 dt {
